[gd_scene load_steps=9 format=2]

[ext_resource path="res://worlds/classes/portal/portal.png" type="Texture" id=1]
[ext_resource path="res://worlds/classes/portal/portal.gd" type="Script" id=2]
[ext_resource path="res://worlds/shaders/0069.png" type="Texture" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform sampler2D NORMAL_MAP;
uniform float refractionPower = 0.5;
uniform float normalSize = 0.2;
uniform vec2 offset = vec2(1, 1);

vec2 effect(vec2 uv){
	vec3 normalMap = normalize((texture(NORMAL_MAP, uv*vec2(normalSize) + offset).rgb * 2.0) - 1.0);
	vec3 tangentViewDirection = vec3(0.0, 0.0, -1.0);
	vec3 refractedDirection = refract(tangentViewDirection, normalMap, 0.75);
	vec3 resultDirection = normalize(mix(tangentViewDirection, refractedDirection, refractionPower));
	
	return resultDirection.xy;
}

void fragment() {
	vec2 uv = UV;
	uv += effect(UV);
	
	COLOR = texture(TEXTURE, uv);
	
}

"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/refractionPower = 0.5
shader_param/normalSize = 0.3
shader_param/offset = Vector2( 0, 0 )
shader_param/NORMAL_MAP = ExtResource( 3 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Portal:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portal:material:shader_param/offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "spin"
length = 8.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Portal:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portal:material:shader_param/offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[node name="portal" type="Position2D"]
script = ExtResource( 2 )

[node name="Portal" type="Sprite" parent="."]
material = SubResource( 5 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Portal"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
texture_scale = 2.0
color = Color( 1, 1, 1, 0.811765 )
energy = 1.5
range_z_min = -1
shadow_item_cull_mask = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spin"
anims/RESET = SubResource( 1 )
anims/spin = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -1.35525e-20, -5.72205e-06 )
scale = Vector2( 12.8, 12.8 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
